--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="a news app that fetches news from the news api"
+      content="simplified pipeline editor inspired by VectorShift"
     />
     <link rel="apple-touch-icon" href="vs.jpg" />
   
-    <title>Pipeline Editor</title>
+    <title>VS - Pipeline Editor</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
